# quotabot

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh
.github/: dependabot.yml  pull_request_template.md
app/: README.md  analysis_options.yaml  pubspec.yaml
collector/: analysis_options.yaml  dart_test.yaml  pubspec.yaml
docs/: ARCHITECTURE.md  BUILDING.md  DATA_SOURCES.md  DESKTOP-DISTRIBUTION.md  PRODUCT-STRATEGY.md  PROVIDER_CLIS.md  README.md  ROUTING-MATH.md  SCHEMA.md  SETUP.md  USAGE.md
integrations/litellm/: README.md  config.example.yaml  pyproject.toml  quotabot-routing.example.yaml  quotabot_router.py  requirements.in  requirements.txt  test_quotabot_proxy_integration.py  test_quotabot_router.py
tools/: ansi_to_png.py  archive_dependabot_advisory.py  capture.ps1  check_lcov.py  check_release_version.py  create-shortcut.ps1  desktop_readiness_smoke.py  generate_readme_demo.py  local-setup.ps1  package-cli.ps1  package-cli.sh  package-linux.sh  package-macos.sh  package-pair.ps1  package-pair.sh  package-windows.ps1  quotabot.desktop  setup-flutter-ci.ps1  setup.ps1  setup.sh  test-install-transaction.ps1  test-package-pair.ps1  test-package-pair.sh  test-posix-install-transaction.sh  test-windows-architecture.ps1  test-write-desktop-entry.sh  test_archive_dependabot_advisory.py  test_check_lcov.py  test_check_release_version.py  test_dependency_policy.py  test_desktop_readiness_smoke.py  test_desktop_release_policy.py  (+8 more)
(+238 files in other folders)
