[project]
name = "quotabot-litellm-integration"
version = "0.0.0"
description = "LiteLLM routing integration and policy tests for quotabot"
requires-python = ">=3.10,<3.14"

# Runtime dependency pins and hashes remain in requirements.in and
# requirements.txt so this example can be installed without packaging it.
